# cpp_essentials

./: .bazeliskrc  .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD.bazel  MODULE.bazel  README.md  devel_notes.md
pybind/: BUILD.bazel  __init__.py  bindings.cc  copyable_unique_ptr_holder_type.h  generate_stubs.py  identifier_pybind.h  pymodule_pybind.h  text_logging_pybind.cc  utils_bindings.cc
pybind/test/: utils_test.py
tools/: BUILD.bazel  buildifier_test.bzl  clang_format_test.bzl  common_utils_cc.bzl  common_utils_py.bzl  embedded_py.bzl  kwargs.bzl  lint.bzl
utils/: BUILD.bazel  common_utils_assert.h  common_utils_assert_and_throw.cc  common_utils_assertion_error.h  common_utils_copyable.h  common_utils_throw.h  copyable_unique_ptr.h  cuda_utils.h  eigen_pack_utils.h  eigen_random.cc  eigen_random.h  eigen_types.h  fmt.cc  fmt.h  fmt_eigen.cc  fmt_eigen.h  fmt_ostream.h  hash.h  identifier.cc  identifier.h  is_cloneable.h  is_less_than_comparable.h  never_destroyed.h  nice_type_name.cc  nice_type_name.h  nice_type_name_override.cc  nice_type_name_override.h  parallelism.cc  parallelism.h  random.cc  random.h  scalar_types.h  sorted_pair.cc  sorted_pair.h  text_logging.cc  text_logging.h  unused.h
utils/essential/: BUILD.bazel  common_utils_assert_and_throw.cc  common_utils_throw.h  eigen_types.h  never_destroyed.h
utils/essential/fmt/: BUILD.bazel  fmt.cc  fmt.h  fmt_eigen.cc  fmt_eigen.h  fmt_ostream.h
utils/essential/test/: common_utils_assert_test.cc  common_utils_copyable_test.cc  common_utils_throw_test.cc  never_destroyed_test.cc  scalar_types_test.cc  scalar_types_test.cu
utils/test/: common_utils_assert_test.cc  common_utils_copyable_test.cc  common_utils_throw_test.cc  copyable_unique_ptr_test.cc  cuda_utils_test.cc  eigen_pack_utils_test.cc  eigen_random_test.cc  eigen_types_test.cc  hash_test.cc  identifier_test.cc  is_cloneable_test.cc  is_less_than_comparable_test.cc  never_destroyed_test.cc  nice_type_name_test.cc  parallelism_test.cc  random_test.cc  scalar_types_test.cc  scalar_types_test.cu  sorted_pair_test.cc  text_logging_ostream_test.cc  text_logging_test.cc
utils/test_utils/: BUILD.bazel  eigen_matrix_compare.h  expect_no_throw.h  expect_throws_message.h  is_dynamic_castable.h  tuple_to_gtest_testing_tuple.h
utils/test_utils/test/: eigen_matrix_compare_test.cc  expect_no_throw_test.cc  is_dynamic_castable_test.cc
