load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")

package(default_visibility = ["//visibility:public"])

buildifier(
    name = "buildifier",
    lint_mode = "warn",
    mode = "check",
    verbose = True,
)

filegroup(
    name = "clang_format_config",
    srcs = [".clang-format"],
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "compile_interactive_tests",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)
